media for 32 layer demo

--- a/public/scripts/media/html_layers/index.html
+++ b/public/scripts/media/html_layers/index.html
@@ -12,7 +12,6 @@
 
 <body>
   <div>
-    <!--
     <img src="32/gen_animated_0.gif" style="position: absolute; opacity: 0.80" />
     <img src="32/gen_animated_1.gif" style="position: absolute; opacity: 0.79" />
     <img src="32/gen_animated_2.gif" style="position: absolute; opacity: 0.78" />
@@ -45,9 +44,8 @@
     <img src="32/gen_animated_29.gif" style="position: absolute; opacity: 0.51" />
     <img src="32/gen_animated_30.gif" style="position: absolute; opacity: 0.50" />
     <img src="32/gen_animated_31.gif" style="position: absolute; opacity: 0.49" />
-    <img src="32/gen_animated_32.gif" style="position: absolute; opacity: 0.48" />
-    -->
-
+    <img src="32/gen_animated_32.gif" style="position: absolute; opacity: 0.48; width: 200px;" />
+    <!--
     <img src="64/gen_animated_0.gif" style="position: absolute; opacity: 0.80" />
     <img src="64/gen_animated_1.gif" style="position: absolute; opacity: 0.795" />
     <img src="64/gen_animated_2.gif" style="position: absolute; opacity: 0.79" />
@@ -113,6 +111,7 @@
     <img src="64/gen_animated_62.gif" style="position: absolute; opacity: 0.49" />
     <img src="64/gen_animated_63.gif" style="position: absolute; opacity: 0.485" />
     <img src="64/gen_animated_64.gif" style="position: absolute; opacity: 0.48" />
+    -->
   </div>
 </body>
 
